# drake

doc/: ik.tex
drake/common/: autodiff_overloads.h  eigen_types.h
drake/examples/: BUILD
drake/examples/Acrobot/: swingUpURDF.m
drake/examples/ChineseYoYo/: ChineseYoYo.m  ChineseYoYo_v1.urdf  ChineseYoYo_v2.urdf  README  SoftPaddleControl.m  SoftPaddleControlReal_v2.m  SoftPaddleHybrid.m  SoftPaddleHybridReal.m  SoftPaddleReal_v1.urdf  costFunCumulative.m  (+9 more)
drake/examples/SoftPaddle/: BUILD  CMakeLists.txt  README.md  mirror_law_system.cc  mirror_law_system.h  mirror_law_system_two_parameter.cc  mirror_law_system_two_parameter.h  soft_paddle.urdf  soft_paddle_gen.sh  soft_paddle_mirror_law_test.cc  soft_paddle_plant-inl.h  soft_paddle_plant.cc  soft_paddle_plant.h  soft_paddle_poincare_map-inl.h  soft_paddle_poincare_map.cc  soft_paddle_poincare_map.h  soft_paddle_poincare_map_test.cc  soft_paddle_run_dynamics.cc  soft_paddle_state_to_bot_visualizer.cc  soft_paddle_state_to_bot_visualizer.h  soft_paddle_state_vector.cc  soft_paddle_state_vector.h
drake/math/: BUILD
drake/solvers/: DrakeFunctionConstraint.m
drake/util/: fast_dmsubs.m  msspoly2sym.m
examples/acrobot/: BUILD.bazel  acrobot_plant.cc  acrobot_run_passive.cc
examples/cosserat_rod/: BUILD  rod_element.cc  rod_element.h
multibody/inverse_kinematics/: BUILD.bazel  inverse_kinematics_options.cc  inverse_kinematics_options.h
multibody/multibody_tree/: BUILD.bazel  articulated_body_inertia.h  articulated_inertia.cc  articulated_inertia.h  articulated_kinematics_cache.cc  articulated_kinematics_cache.h  ball_mobilizer.cc  body_node.h  mobilizer_impl.cc  multibody_tree.cc  multibody_tree.h  rotational_inertia.h  rpy_mobilizer.h
multibody/plant/: multibody_plant.cc
systems/framework/: system.h
(+206 files in other folders)
